find all alerts service test
